# licsense

./: .gitignore  README.md  pom.xml
license-checker/: pom.xml
license-checker-java-client/: pom.xml
license-example-plugin/: pom.xml
license-gui/: .editorconfig  Design.drawio  Dockerfile-gui  README.md  angular.json  docker-compose.yml  package-lock.json  package.json  pom.xml  proxy.conf.json  tomcat-server.xml  tomcat-web.xml  tsconfig.json
license-nexus/: .env  README.md  docker-compose.yml
license-oas-api/: .env  chown-fix.sh  config-client-typescript-angular.json  config-client-typescript-fetch.json  config-client-webclient.json  config-server-rust-axum.json  config-server-rust.json  config-server-spring-boot.json  deploy-all.bat  deploy-all.sh  deploy-client-webclient.bat  (+11 more)
license-server-rs/: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  pom.xml
license-server-rs/src/: auth.rs  main.rs  server.rs
license-server-rs/src/controller/: key_controller.rs  license_check_controller.rs  license_controller.rs  mod.rs  publisher_controller.rs
license-server-rs/src/mapper/: license_check_result_model_mapper.rs  license_key_model_mapper.rs  license_log_model_mapper.rs  license_mode_model_mapper.rs  license_model_mapper.rs  list_behavior_model_mapper.rs  mod.rs
license-server-rs/src/model/: license_check_result.rs  license_check_result_model.rs  license_key_model.rs  license_log_model.rs  license_model.rs  list_behavior_result.rs  list_mode.rs  list_mode_model.rs  mod.rs  token_claims.rs
license-server-rs/src/service/: key_service.rs  mod.rs
(+286 files in other folders)
