[package]
name = "license-server-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
license_api_server_rust_axum = { version = "1.0.0", path = "../license-oas-api/target/rust-axum" }
async-trait = "0.1.89"
http = "1.4.0"
axum-extra = "0.12.2"
chrono = "0.4.42"
regex = "1.12.2"
rsa = "0.10.0-rc.10"
base64 = "0.22.1"
sha2 = "0.11.0-rc.3"
rand = "0.9.2"
